tests/neg/i1845.scala
object Test {
  type X = FooBar22.this // error
}
